# geometry

./: .gitignore  CMakeLists.txt  Makefile  README.md  addition_test.cc  geometry.cc  geometry.h  merging_test.cc  position_test.cc  rectangle_test.cc  rectangles_test.cc  testing.h  vector_test.cc
